--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,7 @@
     "react-icons": "^3.10.0",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
